# platform-engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  compose.yaml  flake.nix
docs/: README.md  SUMMARY.md  book.toml
docs/how-to-guides/: add-new-vpn-peers.md
docs/reference/: project-structure.md
docs/tutorials/: add-a-new-domain.md  bootstrapping-gitops.md  connect-to-vpn.md  expose-application-to-the-internet.md  git-push-to-deploy.md  installation.md  monitor-your-application.md
src/: activities.rs  api.rs  cli.rs  core.rs  gitops.rs  lib.rs  server.rs  temporal.rs  worker.rs  workflows.rs
src/activities/: app.rs  app_build.rs  app_source_detect.rs  app_source_pull.rs  forgejo.rs  git.rs  git_auth.rs  image_push.rs  mod.rs  process.rs  workspace.rs
src/core/: app.rs  gitops.rs
src/core/app/: builder.rs  image.rs  source.rs
src/gitops/: bundle.rs  create.rs  inventory.rs  manifest.rs  update.rs
src/workflows/: add_app.rs  create_app.rs  delete_app.rs  forgejo_bootstrap.rs  gitops_publish.rs  golden_path.rs  options.rs  push_to_deploy.rs
tests/: common.rs  integration_test.rs
