[package]
name = "platform-engine"
version = "0.2.0"
edition = "2024"

[dependencies]
temporalio-client = "0.4"
temporalio-common = "0.4"
temporalio-macros = "0.4"
temporalio-sdk = "0.4"
temporalio-sdk-core = "0.4"

anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# TODO switch to std::net::hostname https://github.com/rust-lang/rust/pull/135141
gethostname = "1.0.2"
