[package]
name = "platform-engine"
version = "0.2.0"
edition = "2024"

[dependencies]
temporalio-client = "0.4"
temporalio-common = "0.4"
temporalio-macros = "0.4"
temporalio-sdk = "0.4"
temporalio-sdk-core = "0.4"

anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
futures = "0.3"
futures-util = "0.3"
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
yaml_serde = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
